--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@ h1{
     font-family: 'Handlee', cursive;
 }
 
+h1 img{
+    width: 50px;
+}
+
 ul{
     list-style-type: none;
     float: left;
@@ -23,8 +27,8 @@ li{
 
 }
 
-img{
-    border: 1px solid #000;
+.dog-img{
+    border: 1px solid #ffffff;
     width: 100px;
     height: 100px;
     margin: 10px;
@@ -38,14 +42,13 @@ img{
     float: left;
     margin: 10%;
     box-sizing: border-box;
-    border: 1px solid #000;
+  
 }
 
 @media (min-width: 992px) { 
     #div1{
         width: 900px;
         height: 400px;
-        border: 1px solid #000;
         position: relative;
         margin: 5%;
         
