--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,6 @@ ul{
 
 li{
     float: left;
-
 }
 
 .dog-img{
@@ -33,8 +32,11 @@ li{
     height: 100px;
     margin: 10px;
     margin-left: 5px;
-  
 } 
+
+.dog-img:hover{
+    cursor: pointer;
+}
 
 #div1{
     width: 80%;
@@ -42,7 +44,6 @@ li{
     float: left;
     margin: 10%;
     box-sizing: border-box;
-  
 }
 
 @media (min-width: 992px) { 
