--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
 body{
     padding: 0;
     margin: 0;
-    background: linear-gradient(to bottom, #ccccff 0%, #ffccff 100%);
+   
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%, #285AEB 100%);
+    /*background: linear-gradient(to bottom, #ccccff 0%, #ffccff 100%);*/
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -9,12 +11,13 @@ body{
 }
 
 h1{
-    margin-top: 30px;
-    font-family: 'Handlee', cursive;
+    margin-top: 50px;
+    font-family: 'Mountains of Christmas', cursive;
+
 }
 
 h1 img{
-    width: 50px;
+    width: 30px;
 }
 
 ul{
@@ -31,7 +34,7 @@ li{
     width: 100px;
     height: 100px;
     margin: 10px;
-    margin-left: 5px;
+    margin-left: 30px;
     box-sizing: border-box;
 } 
 
@@ -40,12 +43,50 @@ li{
 }
 
 #div1{
+    padding-left: 7%;
     width: 85%;
-    height: 237px;
+    min-height: 300px;
     float: left;
     margin: 10%;
     box-sizing: border-box;
+
 }
+
+/* #div1 img:nth-child(1){
+    width: 50%;
+    height: 50%;
+    margin: 0;
+}
+
+#div1 img:nth-child(2){
+    width: 30%;
+    height: 30%;
+    margin: 0;
+}
+
+#div1 img:nth-child(3){
+    width: 20%;
+    height: 20%;
+    margin: 0;
+}
+
+#div1 img:nth-child(4){
+    width: 20%;
+    height: 20%;
+    margin: 0;
+}
+
+#div1 img:nth-child(5){
+    width: 30%;
+    height: 60%;
+    margin: 0;
+}
+
+#div1 img:nth-child(6){
+    width: 50%;
+    height: 30%;
+    margin: 0;
+} */
 
 @media (min-width: 992px) { 
     #div1{
