--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ li{
     width: 100px;
     height: 100px;
     margin: 10px;
-    margin-left: 30px;
+    margin-left: 20px;
     box-sizing: border-box;
 } 
 
@@ -43,7 +43,7 @@ li{
 }
 
 #div1{
-    padding-left: 7%;
+    padding: 5%
     width: 85%;
     min-height: 300px;
     float: left;
