--- a/css/main.css
+++ b/css/main.css
@@ -46,46 +46,45 @@ li{
     width: 85%;
     min-height: 300px;
     float: left;
-    margin: 10%;
+    margin: 9%;
     box-sizing: border-box;
 
 }
 
-/* #div1 img:nth-child(1){
-    width: 50%;
+#div1 img:nth-child(1){
+    width: 51%;
     height: 50%;
     margin: 0;
 }
 
 #div1 img:nth-child(2){
-    width: 30%;
-    height: 30%;
+    width: 49%;
+    height: 36%;
     margin: 0;
 }
 
 #div1 img:nth-child(3){
-    width: 20%;
-    height: 20%;
+    width: 36%;
     margin: 0;
 }
 
 #div1 img:nth-child(4){
-    width: 20%;
-    height: 20%;
+    width: 141px;
+    height: 121px;
     margin: 0;
 }
 
 #div1 img:nth-child(5){
-    width: 30%;
-    height: 60%;
+    width: 112px;
+    height: 119px;
     margin: 0;
 }
 
 #div1 img:nth-child(6){
-    width: 50%;
-    height: 30%;
+    width: 135px;
+    height: 89px;
     margin: 0;
-} */
+} 
 
 @media (min-width: 992px) { 
     #div1{
